# TFG-Aletheia

./: .env  Dockerfile  README.md  docker-compose.yml  logs.json  pyproject.toml  secrets.json
.github/workflows/: pytest_develop.yml  unittest_develop.yml
apps/: container.py
apps/acceptance_test/: logs.json  test_course_endpoint_should.py
apps/acceptance_test/api/: logs.json  test_fastapi_server.py  test_produce_and_consume_content_path.py  test_students_features.py
apps/admin/: container.py
apps/admin/acceptance_test/: test_course_endpoint_should.py
apps/admin/api/: __main__.py  dependencies.py  main.py
apps/aletheia/: container.py
apps/aletheia/acceptance_test/: conftest.py  logs.json
apps/aletheia/api/: __main__.py  dependencies.py  logs.json  main.py
apps/api/: __main__.py  dependencies.py  main.py
apps/api/config/: api_config.py
apps/api/models/: courses.py  notifications_subscriptions.py  teachers.py
apps/api/routers/: conferences.py  courses.py  faculties.py  iam.py  notifications_subscriptions.py  students.py  teachers.py  videos.py
apps/config/: container.py
apps/test/: logs.json  test_course_endpoint_should.py
src/courses/domain/: entities.py  errors.py  events.py  repository.py  value_objects.py
src/courses/infrastructure/: repository.py
src/shared/application/: command_handlers.py  events.py  integration_events.py
src/shared/domain/: buisness_rules.py  entities.py  errors.py  events.py  repositories.py  repository.py  value_objects.py
test/shared/: custom_random.py  database.py  files.py  test_repository.py
(+276 files in other folders)
